--- a/JeopardyGameServer/JeopardyGame.Data/App.Config
+++ b/JeopardyGameServer/JeopardyGame.Data/App.Config
@@ -19,4 +19,8 @@
     </assemblyBinding>
   </runtime>
 
+<connectionStrings>
+	<add name="JeopardyDBContainer" connectionString="metadata=res://*/JeopardyDB.csdl|res://*/JeopardyDB.ssdl|res://*/JeopardyDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-VPJGL1I\SQLEXPRESS;
+		initial catalog=Jeopardy;persist security info=True;user id=JeopardyUser;password=Jeopardy;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+</connectionStrings>
 </configuration>
