--- a/JeopardyGameServer/JeopardyGame.Host/App.config
+++ b/JeopardyGameServer/JeopardyGame.Host/App.config
@@ -56,8 +56,8 @@
 		<endpoint address="JeopardyGame.Service" binding="netTcpBinding" bindingConfiguration="" contract="JeopardyGame.Service.InterfacesSevices.IRecoverPassword" />
 		<host>
 		  <baseAddresses>
-            <add baseAddress="http://192.168.107.1:8082" />
-            <add baseAddress="net.tcp://192.168.107.1:8081" />
+			  <add baseAddress="http://localhost:8082" />
+			  <add baseAddress="net.tcp://localhost:8081" />
           </baseAddresses>
         </host>
       </service>	
@@ -70,7 +70,8 @@
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
 	<connectionStrings>
-		<add name="JeopardyDBContainer" connectionString="%JEOPARDY_DB_CONNECTION_STRING%" providerName="System.Data.EntityClient" />
+		<add name="JeopardyDBContainer" connectionString="metadata=res://*/JeopardyDB.csdl|res://*/JeopardyDB.ssdl|res://*/JeopardyDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-VPJGL1I\SQLEXPRESS;
+		initial catalog=Jeopardy;persist security info=True;user id=JeopardyUser;password=Jeopardy;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
