--- a/JeopardyGameServer/TestJeopardyServidor/App.config
+++ b/JeopardyGameServer/TestJeopardyServidor/App.config
@@ -11,7 +11,8 @@
     </providers>
   </entityFramework>
 	<connectionStrings>
-		<add name="JeopardyDBContainer" connectionString="%JEOPARDY_DB_CONNECTION_STRING%" providerName="System.Data.EntityClient" />
+		<add name="JeopardyDBContainer" connectionString="metadata=res://*/JeopardyDB.csdl|res://*/JeopardyDB.ssdl|res://*/JeopardyDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-VPJGL1I\SQLEXPRESS;
+		initial catalog=Jeopardy;persist security info=True;user id=JeopardyUser;password=Jeopardy;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
